objects/pse__Forecast_Setup__c.object
<CustomObject>
    <customHelpPage>pse__ForecastEnhancedSetupHelp</customHelpPage>
    <description>Contains the information required to configure and run a billing forecast calculation.</description>
    <fields>
        <fullName>pse__Actuals_Cutoff_Offset__c</fullName>
        <description>Enter the number of days prior to the current date up to which actuals should be included. Enter 0 to use today as the cutoff date. Leave blank to use the default cut off date, which is the end of last week.</description>
        <inlineHelpText>Enter the number of days prior to the current date up to which actuals should be included. Enter 0 to use today as the cutoff date. Leave blank to use the default cut off date, which is the end of last week.</inlineHelpText>
        <label>Actuals Cutoff Offset</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Default_Opportunity_Curve__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The billing forecast curve applied to an opportunity during a billing forecast calculation if the opportunity does not have a curve assigned to it.</description>
        <inlineHelpText>The forecast curve applied to an opportunity during a forecast calculation if the opportunity does not have a curve assigned to it.</inlineHelpText>
        <label>Default Opportunity Curve</label>
        <referenceTo>pse__Forecast_Curve__c</referenceTo>
        <relationshipLabel>Billing Forecast Setup Default Opportunity Curve</relationshipLabel>
        <relationshipName>Forecast_Setup_Opportunity_Curve</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Default_Project_Curve__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The billing forecast curve applied to a project during a billing forecast calculation if the project does not have a curve assigned to it.</description>
        <inlineHelpText>The forecast curve applied to a project during a forecast calculation if the project does not have a curve assigned to it.</inlineHelpText>
        <label>Default Project Curve</label>
        <referenceTo>pse__Forecast_Curve__c</referenceTo>
        <relationshipLabel>Billing Forecast Setup Default Project Curve</relationshipLabel>
        <relationshipName>Forecast_Setup_Project_Curve</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Denotes the setup record which will be used for new billing forecast calculations.</description>
        <inlineHelpText>Denotes the setup object which will be used for new forecast calculations.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Use_Is_Services_Product_On_Opp_Product__c</fullName>
        <description>If you select Opportunity Product, only opportunity products that have IsServicesProductLine checked are included. If you select Product, only opportunity products that have IsServicesProduct checked on the product itself are included.</description>
        <inlineHelpText>If you select Opportunity Product, only opportunity products that have IsServicesProductLine checked are included. If you select Product, only opportunity products that have IsServicesProduct checked on the product itself are included.</inlineHelpText>
        <label>Use Is Services Product On Opp Product</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Opportunity Product</fullName>
                </value>
                <value>
                    <fullName>Product</fullName>
                    <default>true</default>
                    <label>Product</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pse__Use_Opportunity_Curve_For_Products__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If set to true, the opportunity curve is always applied when running a billing forecast calculation.</description>
        <inlineHelpText>If set to true, the opportunity curve is always applied when running a billing forecast calculation.</inlineHelpText>
        <label>Use Opportunity Curve for Products</label>
        <type>Checkbox</type>
    </fields>
    <label>Billing Forecast Setup</label>
    <listViews>
        <fullName>pse__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>FSetup-{0000}</displayFormat>
        <label>Billing Forecast Setup Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Billing Forecast Setup</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>